<resources>

    <string name="app_name">车机助手</string>
    <string name="bg_main_btn_add">添加</string>
    <string name="bg_main_btn_all">全部</string>
    <string name="music_title">音乐</string>
    <string name="music_name">音乐名称</string>
    <string name="music_album">音乐专辑</string>

    <string name="time_title">时间</string>

    <string name="iv_main_dock_icon">首页dock图标</string>
    <string name="iv_plugin_menu">插件菜单</string>
    <string name="iv_plugin_music_cover">音乐封面</string>
    <string name="iv_plugin_music_play">音乐播放</string>
    <string name="iv_plugin_music_pre">音乐上一首</string>
    <string name="iv_plugin_music_next">音乐下一首</string>

    <string name="set_allow">允许</string>
    <string name="set_ban">禁止</string>
    <string name="set_show">显示</string>
    <string name="set_hide">隐藏</string>
    <string name="set_yes">是</string>
    <string name="set_no">否</string>

    <string name="iv_content">图片</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <string name="driving_cool_black_tp">%1$.1f/%2$d℃</string>
    <string name="driving_cool_black_tp_nodata">0.0</string>
    <string name="trip_merge_time_message">OBD两次读取转速不为0的时间间隔 %1$d 分钟,默认为同一行程</string>

</resources>
