<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:text="@string/music_name"
        android:textColor="@color/plugin_music_name"
        app:layout_heightPercent="25%h"
        app:layout_textSizePercent="20%h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_heightPercent="75%h">

        <ImageView
            android:id="@+id/iv_prew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_pre"
            android:padding="5dp"
            android:src="@drawable/l_bg_prew" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_play"
            android:padding="5dp"
            android:src="@mipmap/play" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_next"
            android:padding="5dp"
            android:src="@drawable/l_bg_next" />
    </LinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>