<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_marginLeftPercent="4%h"
        app:layout_marginRightPercent="4%h"
        app:layout_marginTopPercent="2%h">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="55%h">

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/music_name"
                    android:textColor="@color/plugin_music_name"
                    app:layout_textSizePercent="15%h" />

                <TextView
                    android:id="@+id/tv_artist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/music_album"
                    android:textColor="@color/plugin_music_album"
                    android:textSize="25sp"
                    app:layout_textSizePercent="15%h" />
            </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentRelativeLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="45%h"
            app:layout_marginTopPercent="55%h">

            <ImageView
                android:id="@+id/iv_prew"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/iv_plugin_music_pre"
                android:padding="5dp"
                android:src="@drawable/l_bg_prew" />

            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/iv_plugin_music_play"
                android:padding="5dp"
                android:src="@mipmap/play" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/iv_plugin_music_next"
                android:padding="5dp"
                android:src="@drawable/l_bg_next" />
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentRelativeLayout>
</com.zhy.android.percent.support.PercentLinearLayout>