<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_house"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:alpha="0"
        android:orientation="horizontal" />

    <com.wow.carlauncher.common.view.CustomImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:radius="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/l_item_bg_transparent_black" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        app:layout_heightPercent="25%w">

        <ImageView
            android:id="@+id/iv_prew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_pre"
            android:padding="5dp"
            android:src="@drawable/l_bg_prew" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_play"
            android:padding="5dp"
            android:src="@mipmap/play" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/iv_plugin_music_next"
            android:padding="5dp"
            android:src="@drawable/l_bg_next" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <ProgressBar
        android:id="@+id/pb_music"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/rl_bottom"
        android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
        android:max="100"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:progressDrawable="@drawable/l_music_progress" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pb_music"
        android:layout_alignParentEnd="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="11/33"
        android:textColor="@color/plugin_music_album"
        app:layout_textSizePercent="6%h" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pb_music"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/tv_time"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingStart="20dp"
        android:text="@string/music_album"
        android:textColor="@color/plugin_music_album"
        app:layout_textSizePercent="6%h" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_artist"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/music_name"
        android:textColor="@color/plugin_music_name"
        app:layout_textSizePercent="8%h" />
</com.zhy.android.percent.support.PercentRelativeLayout>